# MyProject

./: .gitignore  Android.mk  CMakeLists.txt  SDK.hpp  UE4.h  exe_right.cpp  fake_dlfcn.cpp  main.cpp
.androidide/editor/: openedFiles.json  openedFiles.json.bak
.github/workflows/: cmake-single-platform.yml
SDK/: PUBGM_ACLPlugin_classes.hpp  PUBGM_ACLPlugin_structs.hpp  PUBGM_AIGCKit_classes.hpp  PUBGM_AIGCKit_functions.cpp  PUBGM_AIGCKit_parameters.hpp  PUBGM_AIGCKit_structs.hpp  PUBGM_AIModule_classes.hpp  PUBGM_AIModule_functions.cpp  PUBGM_AIModule_parameters.hpp  PUBGM_AIModule_structs.hpp  PUBGM_AI_classes.hpp  PUBGM_AI_functions.cpp  PUBGM_AI_parameters.hpp  PUBGM_AI_structs.hpp  PUBGM_AWSHelper_classes.hpp  PUBGM_AWSHelper_functions.cpp  PUBGM_AWSHelper_parameters.hpp  PUBGM_ActorSequence_classes.hpp  PUBGM_ActorSequence_functions.cpp  PUBGM_ActorSequence_parameters.hpp  PUBGM_ActorSequence_structs.hpp  PUBGM_Addons_classes.hpp  PUBGM_Addons_functions.cpp  PUBGM_Addons_parameters.hpp  PUBGM_Addons_structs.hpp  PUBGM_AkAudio_classes.hpp  PUBGM_AkAudio_functions.cpp  PUBGM_AkAudio_parameters.hpp  PUBGM_AkAudio_structs.hpp  PUBGM_AndroidDeviceProfileSelector_classes.hpp  PUBGM_AndroidDeviceProfileSelector_structs.hpp  PUBGM_AndroidMediaFactory_classes.hpp  PUBGM_AndroidPermission_classes.hpp  PUBGM_AndroidPermission_functions.cpp  PUBGM_AndroidPermission_parameters.hpp  PUBGM_AndroidRuntimeSettings_classes.hpp  PUBGM_AndroidRuntimeSettings_structs.hpp  PUBGM_AnimGraphRuntime_classes.hpp  PUBGM_AnimGraphRuntime_functions.cpp  PUBGM_AnimGraphRuntime_parameters.hpp  (+594 more)
imgui/: imconfig.h  imgui.h  imgui.h.bak  imgui_draw.cpp  imgui_draw.cpp.bak
imgui/backends/: imgui_impl_android.cpp
patch/: Macros.h
